tests/js_error/source_locations/expression/yield_star/next_throws.exp
Error: next
  at next (tests/js_error/source_locations/expression/yield_star/next_throws.js:5:15)
  at generator (tests/js_error/source_locations/expression/yield_star/next_throws.js:12:3)
  at next (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/next_throws.js:16:1)
